--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to dARK - Hyperdrive</title>
+    <title>Welcome to decentralized Archive Resource Key (dARK) - Hyperdrive Module</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">Dπ</a>
+    <a class="navbar-brand" href="#">dARK - Hyperdrive</a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -23,16 +23,16 @@
     </button>
 
     <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <!-- <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Register</a>
-            </li>
+            </li> -->
             <!-- Dropdown -->
-            {% if  'user_name' in session: %}
+            <!-- {% if  'user_name' in session: %}
                 <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                         Welcome {{session['user_name']}}
@@ -42,13 +42,13 @@
                       <li><a class="dropdown-item" href="/orders/">Add Object</a></li>
                     </ul>
                 </li>
-            {% else %}
+            {% else %} 
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
                 </li>
             {% endif %}
         </ul>
-    </div>
+    </div> -->
 </nav>
 <div class="container">
     {% block content %}{% endblock %}
