--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,13 +10,17 @@
   }
 </style>
 
+
+
 <div style="margin-top:30px" class="row text-center">
-    <div class="col-md-12">
-        <ul>
-          Welcome to dARK Hyperdrive 
-          <!-- <li>um</li>
-          <li>um</li> -->
-        </ul>
-    </div>
+  <img src="{{url_for('static', filename='dark-logo.png')}}" align="middle"/>
+
+  <div class="col-md-12">
+      <ul>
+        Welcome to decentralized Archive Resource Key (dARK) - Hyperdrive Module
+        <!-- <li>um</li>
+        <li>um</li> -->
+      </ul>
+  </div>
 </div>
 {% endblock %}
